--- a/graphics/graphics_style.css
+++ b/graphics/graphics_style.css
@@ -1,114 +1,165 @@
-#box1 {
-    position: absolute;
-    left: 20px;
-    border-radius: 20px;
-    padding: 20px;
-    width: 560px;
-    font-size: 16px;
-    color: white;
-    top: 20px;
-    background-color: #0800ff;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500;700&family=Oswald:wght@700&display=swap');
+
+body {
+    font-family: 'Noto Sans JP', sans-serif;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    background-image: url("/assets/rttr_layouts/materials/bg.png");
 }
 
-#box2 {
-    position: absolute;
-    left: 20px;
-    border-radius: 20px;
-    padding: 20px;
-    width: 560px;
-    font-size: 16px;
-    color: white;
-    top: 200px;
-    background-color: #00d8ff;
+.video {
+    background-color: black;
 }
 
-#box3 {
-    position: absolute;
-    left: 20px;
-    border-radius: 20px;
-    padding: 20px;
-    width: 560px;
-    font-size: 16px;
-    color: white;
-    top: 355px;
-    background-color: #00bba4;
+#sideBar {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: calc(1920px * 0.33);
 }
 
-#box4 {
-    position: absolute;
-    left: 20px;
-    border-radius: 20px;
-    padding: 20px;
-    width: 560px;
-    font-size: 16px;
+.infoBox {
+    padding: 10px;
+    width: calc(100% - 20px);
+    font-size: 18px;
     color: white;
-    top: 510px;
-    background-color: #00ff2e;
 }
 
-.nameColumn {
-    float: left;
+.row {
+    display: flex;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.1);
 }
 
-.iconColumn {
-    float: left;
-    width: 15%;
+.runnerInfo {
+    align-items: center;
 }
 
-.leftColumn {
-    float: left;
-    width: 17%;
-    background-color: rgba(0, 0, 0, 0.1);
+.name {
+    width: 100%;
+    font-size: 1.5em;
+    margin-left: 0.5em;
+    margin-top: -0.2em;
 }
 
-.rightColumn {
-    float: right;
-    width: 68%;
+.mirrorId, .icon {
+    width: 40px;
+    height: 40px;
 }
 
-.progress1 {
-    position: absolute;
-    background-color: #ccc;
-    left: 640px;
-    top: 5px;
-    width: 76px;
-    height: 670px;
-    overflow: hidden;
+.mirrorId {
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.6em;
+    line-height: 1.2em;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.2);
 }
 
-.progress2 {
-    position: absolute;
-    background-color: #ccc;
-    left: 90px;
-    top: 1035px;
-    width: 550px;
-    height: 45px;
-    overflow: hidden;
+.label {
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 20%;
 }
 
-.progress3 {
-    position: absolute;
-    background-color: #ccc;
-    left: 730px;
-    top: 1035px;
-    width: 550px;
-    height: 45px;
-    overflow: hidden;
+.value {
+    width: 80%;
 }
 
-.progress4 {
-    position: absolute;
-    background-color: #ccc;
-    left: 1370px;
-    top: 1035px;
-    width: 550px;
-    height: 45px;
-    overflow: hidden;
+#title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Oswald', sans-serif;
+    font-size: 3.2em;
+    line-height: 1em;
+    text-align: center;
+    color: white;
+    opacity: 40%;
+}
+
+#title img {
+    width: 1.2em;
+    margin-top: 0.05em;
+}
+
+#boxGroupA {
+    background-color: rgba(139, 0, 0, 0.7);
+}
+
+#boxGroupB {
+    background-color: rgba(0, 0, 139, 0.7);
+}
+
+#boxGroupC {
+    background-color: rgba(184, 135, 11, 0.7);
+}
+
+#boxGroupD {
+    background-color: rgba(0, 100, 0, 0.7);
+}
+
+#mainScreen {
+    display: flex;
+}
+
+#mainScreen .video {
+    width: calc(1920px * 0.64);
+    height: calc(1080px * 0.64);
+}
+
+#mainScreen .progress {
+    width: calc(1920px * 0.03);
+}
+
+#bottom {
+    display: flex;
+    justify-content: space-between;
+}
+
+.subScreen .progress {
+    height: calc(1080px * 0.04);
+}
+
+.video.sub {
+    width: calc(1920px * 0.32);
+    height: calc(1080px * 0.32);
 }
 
 .progress {
-    background-color: #eeff00;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.progress .mirrorId {    
+    position: absolute;
+    color: white;
+    opacity: 80%;
+}
+
+#progress1 .mirrorId {
+    width: calc(1920px * 0.03);
+    height: calc(1920px * 0.03);
+    background-color: darkred;
+    font-size: 42px;
+}
+
+.subScreen .mirrorId {
+    width: calc(1080px * 0.04);
+    height: calc(1080px * 0.04);
+    font-size: 32px;
+}
+
+#progress2 .mirrorId {
+    background-color: darkblue;
+}
+
+#progress3 .mirrorId {
+    background-color: darkgoldenrod;
+}
+
+#progress4 .mirrorId {
+    background-color: darkgreen;
+}
+
+.progress .remaining {
+    background-color: rgba(238, 255, 0, 0.8);
     height: 100%;
 }
