--- a/graphics/graphics_style_common.css
+++ b/graphics/graphics_style_common.css
@@ -6,7 +6,20 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    background-image: url("/assets/rttr_layouts/materials/bg.png");
+    /* background-image: url("/assets/rttr_layouts/materials/bg.png"); */
+}
+
+#mainBackGround {
+    width: 1920px;
+    height: 1080px;
+}
+
+.wrapper > div {
+    flex: 1;
+}
+
+.wrapper {
+    display: flex;
 }
 
 .video {
@@ -23,7 +36,7 @@ body {
 .infoBox {
     padding: 10px;
     width: calc(100% - 20px);
-    font-size: 18px;
+    font-size: 20px;
     color: white;
 }
 
@@ -68,6 +81,12 @@ body {
     width: 20%;
 }
 
+.comment {
+    font-size: 1.6em;
+    line-height: 1.2em;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
 .value {
     width: 80%;
 }
@@ -102,12 +121,8 @@ body {
     width: calc(1920px * 0.03);
 }
 
-#bottom {
-    display: flex;
-    justify-content: space-between;
-}
-
 .subScreen .progress {
+    width: calc(1920px * 0.32);
     height: calc(1080px * 0.04);
 }
 
@@ -142,4 +157,8 @@ body {
 .progress .remaining {
     background-color: rgba(238, 255, 0, 0.8);
     height: 100%;
+}
+
+#box4 {
+    background-color: rgba(0, 100, 0, 0.7);
 }
