--- a/graphics/graphics_style_common.css
+++ b/graphics/graphics_style_common.css
@@ -6,24 +6,24 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    /* background-image: url("/assets/rttr_layouts/materials/bg.png"); */
 }
 
 #mainBackGround {
-    width: 1920px;
-    height: 1080px;
+    position: absolute;
+    z-index: -1;
 }
 
 .wrapper > div {
-    flex: 1;
+    flex: 0 1 auto;
 }
 
 .wrapper {
     display: flex;
+    justify-content: space-between;
 }
 
 .video {
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0);
 }
 
 #sideBar {
