--- a/graphics/graphics_style_common.css
+++ b/graphics/graphics_style_common.css
@@ -66,6 +66,10 @@ body {
     padding: 10px;
     width: calc(100% - 20px);
     font-size: 20px;
+    outline-width: 6px;
+    outline-style: solid;
+	outline-offset: -6px;
+    background-color: rgba(255, 255, 255, 0.4);
     color: var(--text-color);
 }
 
@@ -87,9 +91,8 @@ body {
 .currentTime {
     margin-left: auto;
     font-family: 'Inconsolata', monospace;
-    font-size: 2.4em;
-    margin-top: -0.3em;
-    color: rgba(255, 255, 255, 0.7)
+    font-size: 2.2em;
+    margin-top: -0.2em;
 }
 
 .mirrorId, .icon {
@@ -102,18 +105,18 @@ body {
     font-size: 1.6em;
     line-height: 1.2em;
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .label {
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
     width: 20%;
 }
 
 .comment {
     font-size: 1.6em;
     line-height: 1.2em;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: rgba(255, 255, 255, 0.4);
 }
 
 .value {
@@ -193,20 +196,8 @@ body {
     outline-color: var(--group3-color);
 }
 
-.box1 {
-    background-color: var(--group1-background);
-}
-
-.box2 {
-    background-color: var(--group2-background);
-}
-
-.box3 {
-    background-color: var(--group3-background);
-}
-
-.box4 {
-    background-color: var(--group4-background);
+.outline4 {
+    outline-color: var(--group4-color);
 }
 
 #progress1 .mirrorId {
